Added file time comparison and config file creation.

--- a/src/AutoProcess.cfg
+++ b/src/AutoProcess.cfg
@@ -1,7 +1,6 @@
 [Directories]
-Number=2
-0=C:\icinema
-1=C:\Dev
+Number=1
+0=C:\Dropbox\Nike\unencoded_assets\Attractor_loop
 
 [Commands]
 0=dir <base>.*
